package com.minicloud.controlplane.grpc;

import com.minicloud.proto.metadata.MetadataServiceGrpc;
import com.minicloud.proto.metadata.MetadataProto.*;
import com.minicloud.proto.common.CommonProto;
import io.grpc.stub.StreamObserver;
import net.devh.boot.grpc.server.service.GrpcService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Service;

import java.time.Instant;
import java.util.UUID;

/**
 * gRPC implementation of MetadataService for table and schema management.
 * This service handles table operations, schema evolution, and snapshot management.
 */
@GrpcService
public class MetadataServiceImpl extends MetadataServiceGrpc.MetadataServiceImplBase {
    
    private static final Logger logger = LoggerFactory.getLogger(MetadataServiceImpl.class);

    @Override
    public void getTable(GetTableRequest request, StreamObserver<GetTableResponse> responseObserver) {
        logger.info("Getting table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual table lookup from Iceberg catalog
            // For now, return a mock response
            TableMetadata table = TableMetadata.newBuilder()
                    .setNamespaceName(request.getNamespaceName())
                    .setTableName(request.getTableName())
                    .setMetadataLocation("/data/" + request.getNamespaceName() + "/" + request.getTableName())
                    .setCurrentSnapshotId(1L)
                    .setCurrentSchemaId(1)
                    .build();

            GetTableResponse response = GetTableResponse.newBuilder()
                    .setTable(table)
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error getting table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void createTable(CreateTableRequest request, StreamObserver<CreateTableResponse> responseObserver) {
        logger.info("Creating table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual table creation with Iceberg
            // For now, return a mock response
            TableMetadata table = TableMetadata.newBuilder()
                    .setNamespaceName(request.getNamespaceName())
                    .setTableName(request.getTableName())
                    .setMetadataLocation("/data/" + request.getNamespaceName() + "/" + request.getTableName())
                    .setCurrentSnapshotId(1L)
                    .setCurrentSchemaId(1)
                    .build();

            CreateTableResponse response = CreateTableResponse.newBuilder()
                    .setTable(table)
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error creating table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void listTables(ListTablesRequest request, StreamObserver<ListTablesResponse> responseObserver) {
        logger.info("Listing tables in namespace: {}", request.getNamespaceName());
        
        try {
            // TODO: Implement actual table listing from Iceberg catalog
            // For now, return empty list
            ListTablesResponse response = ListTablesResponse.newBuilder()
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error listing tables in namespace {}", request.getNamespaceName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void dropTable(DropTableRequest request, StreamObserver<DropTableResponse> responseObserver) {
        logger.info("Dropping table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual table dropping with Iceberg
            DropTableResponse response = DropTableResponse.newBuilder()
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error dropping table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void updateSchema(UpdateSchemaRequest request, StreamObserver<UpdateSchemaResponse> responseObserver) {
        logger.info("Updating schema for table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual schema evolution with Iceberg
            TableMetadata table = TableMetadata.newBuilder()
                    .setNamespaceName(request.getNamespaceName())
                    .setTableName(request.getTableName())
                    .setMetadataLocation("/data/" + request.getNamespaceName() + "/" + request.getTableName())
                    .setCurrentSnapshotId(1L)
                    .setCurrentSchemaId(2) // Incremented schema ID
                    .build();

            UpdateSchemaResponse response = UpdateSchemaResponse.newBuilder()
                    .setTable(table)
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error updating schema for table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void getSchemaHistory(GetSchemaHistoryRequest request, StreamObserver<GetSchemaHistoryResponse> responseObserver) {
        logger.info("Getting schema history for table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual schema history retrieval
            GetSchemaHistoryResponse response = GetSchemaHistoryResponse.newBuilder()
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error getting schema history for table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void commitSnapshot(CommitSnapshotRequest request, StreamObserver<CommitSnapshotResponse> responseObserver) {
        logger.info("Committing snapshot for table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual snapshot commit with Iceberg
            Snapshot snapshot = Snapshot.newBuilder()
                    .setSnapshotId(System.currentTimeMillis())
                    .setOperation(request.getOperation())
                    .build();

            CommitSnapshotResponse response = CommitSnapshotResponse.newBuilder()
                    .setSnapshot(snapshot)
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error committing snapshot for table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    @Override
    public void getSnapshots(GetSnapshotsRequest request, StreamObserver<GetSnapshotsResponse> responseObserver) {
        logger.info("Getting snapshots for table: {}.{}", request.getNamespaceName(), request.getTableName());
        
        try {
            // TODO: Implement actual snapshot retrieval
            GetSnapshotsResponse response = GetSnapshotsResponse.newBuilder()
                    .setResponse(createSuccessResponse())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error getting snapshots for table {}.{}", request.getNamespaceName(), request.getTableName(), e);
            responseObserver.onError(e);
        }
    }

    private CommonProto.StandardResponse createSuccessResponse() {
        return CommonProto.StandardResponse.newBuilder()
                .setStatus(CommonProto.ResponseStatus.SUCCESS)
                .setRequestId(UUID.randomUUID().toString())
                .build();
    }
}